added picocolors to terminal output

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,5 +18,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.17.1"
+  "packageManager": "pnpm@10.17.1",
+  "dependencies": {
+    "picocolors": "^1.1.1"
+  }
 }
