--- a/packages/cli/templates/vanilla-js/package.json
+++ b/packages/cli/templates/vanilla-js/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "pyra-config-test",
-  "version": "1.0.0",
+  "name": "{{PROJECT_NAME}}",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "pyra dev",
     "build": "pyra build"
-  },
-  "dependencies": {
-    "@pyra/shared": "workspace:*"
   }
 }
