--- a/packages/cli/templates/vanilla-ts/package.json
+++ b/packages/cli/templates/vanilla-ts/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "pyra-config-test",
-  "version": "1.0.0",
+  "name": "{{PROJECT_NAME}}",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "pyra dev",
     "build": "pyra build"
   },
-  "dependencies": {
-    "@pyra/shared": "workspace:*"
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
