fixed link error in local dev

--- a/examples/package.json
+++ b/examples/package.json
@@ -5,6 +5,6 @@
   "description": "Configuration examples for Pyra.js",
   "type": "module",
   "dependencies": {
-    "@pyra/shared": "workspace:*"
+    "pyrajs-shared": "workspace:*"
   }
 }
