--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,7 +43,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "pyrajs-shared": "^0.0.2",
+    "pyrajs-shared": "workspace:*",
     "chokidar": "^4.0.3",
     "esbuild": "^0.24.0",
     "ws": "^8.18.0"
