--- a/packages/create-pyra/template-react-ts/package.json
+++ b/packages/create-pyra/template-react-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "something",
+  "name": "{{PROJECT_NAME}}",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -14,7 +14,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "pyrajs-cli": "^0.11.0",
+    "pyrajs-cli": "^{{PYRA_VERSION}}",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "typescript": "^5.7.0"
