--- a/package.json
+++ b/package.json
@@ -4,23 +4,34 @@
   "private": true,
   "type": "module",
   "description": "Pyra.js is a framework designed for building modern full-stack web applications with pluggable UI adapters, unified routing, and a shared runtime.",
-  "author": "Nathaniel Paz",  
+  "author": "Nathaniel Paz",
   "main": "index.js",
   "scripts": {
     "build": "pnpm -r --filter ./packages/* run build",
     "dev:link": "pnpm build && cd packages/cli && npm link",
     "dev:unlink": "cd packages/cli && npm unlink -g",
     "clean": "git clean -xfd -e node_modules",
-    "typecheck": "pnpm -r --filter ./packages/* exec tsc --noEmit"
+    "typecheck": "pnpm -r --filter ./packages/* exec tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["TypeScript", "build tool", "JavaScript", "engine"],
+  "keywords": [
+    "TypeScript",
+    "build tool",
+    "JavaScript",
+    "engine"
+  ],
   "license": "MIT",
   "packageManager": "pnpm@10.17.1",
   "devDependencies": {
+    "@vitest/coverage-v8": "^4.0.18",
+    "memfs": "^4.56.10",
     "pyrajs-cli": "workspace:*",
     "tsup": "^8.5.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@types/node": "^24.10.0"
