--- a/packages/adapter-react/package.json
+++ b/packages/adapter-react/package.json
@@ -31,7 +31,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Simpleboi/Pyra",
+    "url": "https://github.com/Natejsx/Pyra",
     "directory": "packages/adapter-react"
   },
   "dependencies": {
